--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <script src='sprintf.js' type='text/javascript'></script>
     <script src='jquery.js' type='text/javascript'></script>
     <script src='rommanager.js' type='text/javascript'></script>
   </head>
