--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src='rommanager.js' type='text/javascript'></script>
   </head>
   <body>
-    <pre class="rommanagermanifest" manifests="http://gh-pages.clockworkmod.com/ROMManagerManifest/manifeststest.js">
+    <pre class="rommanagermanifest">
     </pre>
       <script language='javascript'>
         RomManager.all();
