--- a/index.html
+++ b/index.html
@@ -2,34 +2,8 @@
   <head>
     <script src="sprintf.js" type="text/javascript"></script>
     <script src="jquery.js" type="text/javascript"></script>
-    <script type="text/javascript">
-    	$(document).ready(function(){
-    		$.getJSON("http://rommanager.appspot.com/manifests/devices.js?callback=?", 
-			function(data) {
-                var version = data.version;
-				var recovery_url = data.recovery_url;
-				var recovery_zip_url = data.recovery_zip_url;
-				
-				var contents = "";
-				$.each(data.devices, function(i, device) {
-					var v = version;
-					if (device.verison != null && device.version > version) {
-						v = device.version;
-					}
-					var readonly_recovery = device.readonly_recovery;
-					var url = null;
-					if (readonly_recovery) {
-						url = sprintf(recovery_zip_url, v, device.key);
-					} else {
-						url = sprintf(recovery_url, v, device.key);
-					}
-					contents = contents + sprintf("<a href=\"%s\">%s</a><br/>", url, device.name);
-				});
-				$('.results').html(contents);
-			}
-		);
-        });
-    </script>
+	<script src="rommanager.js" type="text/javascript"></script>
+ 	<div class="rommanagermanifest"></div>
   </head>
   <body>
     <pre class="results">
